--- a/eduction-frontend/package.json
+++ b/eduction-frontend/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@nextui-org/react": "^2.2.9",
+    "firebase": "^10.8.1",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "swiper": "^11.0.7"
   },
