--- a/eduction-frontend/package.json
+++ b/eduction-frontend/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
